blaze_tablet: enable tablet multiuser support
Enable support of multiuser. This standard google feature
for tablets(for example Nexus10).

Change-Id: I984818537a460d1c589f3e87d49c7b06770d92a0
Signed-off-by: Andrii Beregovenko <a.beregovenko@ti.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -174,4 +174,7 @@
 
     <!-- This device does not allow sms service. -->
     <bool name="config_sms_capable">false</bool>
+
+    <!--  Maximum number of supported users -->
+    <integer name="config_multiuserMaximumUsers">8</integer>
 </resources>
